creusot/tests/should_fail/prusti/at_expiry/static_param.stderr
error[creusot]: at_expiry cannot use 'static since it never expires
 --> static_param.rs:4:11
  |
4 | #[ensures(at_expiry::<'static>(true))]
  |           ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

